--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body *{
 
 body{
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 #container{
@@ -141,4 +142,14 @@ ul li a:hover{
 footer{
   padding: 24px;
   text-align: center;
+}
+
+@media(min-width: 700px){
+  :root{
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light{
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
